# rust-treesitter-agent-code-utility

./: .gitignore  AGENTS.md  AI_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLI_README.md  COMPREHENSIVE_TODO_LIST.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INSTRUCTIONS.md  LICENSE-APACHE  LICENSE-MIT  README.md  README_new.md  REALISTIC_DEVELOPMENT_ROADMAP.md  TASK_LIST.md  ai_config.json  ai_config.yaml  debug_python_test.rs  expanded_todo_plan.md  fix_language_apis.py  real_ai_config.yaml  remove_emojis.py  remove_emojis.sh  test_cli.rs  test_code_map.rs  test_rate_limiter.rs
.github/workflows/: ci.yml
docs/: API.md  CLI.md  CODE_QUALITY_REVIEW.md  DEPENDENCY_AUDIT_REPORT.md  FEATURES.md  MEMORY_SAFETY_AUDIT.md  README.md  STYLE_GUIDE.md  assistant_profile.xml  ast_transformation.md
docs/schemas/: analyze.v1.json  security.v1.json  symbols.v1.json
examples/: ai_code_reviewer.rs  ai_powered_cli.rs  ai_service_demo.rs  ai_showcase.rs  analyze_codebase.rs  ast_transformation_demo.rs  basic_analysis.rs  basic_parsing.rs  basic_usage.rs  code_map.rs  code_migration_assistant.rs  codebase_analysis.rs  comprehensive_demo.rs  debug_response.rs  direct_anthropic_test.rs  direct_openai_test.rs  gpt4o_advanced_demo.rs  gpt4o_simple_test.rs  gpt5_real_analysis.rs  gpt5_ultimate_demo.rs  improvements_demo.rs  incremental_parsing.rs  intelligent_architect.rs  provider_comparison.rs  real_ai_demo.rs  real_api_validation.rs  real_code_analysis.rs  real_file_analysis.rs  real_openai_demo.rs  reasoning_engine_demo.rs  security_analysis.rs  semantic_demo.rs  simple_ai_demo.rs  simple_validation.rs  symbol_extraction.rs  tdd_minimal.rs
examples/plugin_system_demo/: cli_examples.sh
src/: advanced_ai_analysis.rs  advanced_security.rs  ai_analysis.rs  analysis_common.rs  analysis_utils.rs  analyzer.rs  ast_transformation.rs  code_evolution.rs  code_map.rs  command_injection_detector.rs  complexity_analysis.rs  constants.rs  control_flow.rs  cross_language_analysis.rs  dependency_analysis.rs  embeddings.rs  enhanced_error_handling.rs  enhanced_security.rs  error.rs  error_handling.rs  file_cache.rs  input_validation.rs  intent_mapping.rs  intent_mapping_stub.rs  lib.rs  memory_tracker.rs  parser.rs  parsing_error_handler.rs  performance_analysis.rs  performance_optimization.rs  query.rs  reasoning_engine.rs  refactoring.rs  security.rs  semantic_context.rs  semantic_graph.rs  smart_refactoring.rs  sql_injection_detector.rs  symbol_table.rs  taint_analysis.rs  (+2 more)
src/ai/: cache.rs  config.rs  error.rs  mod.rs  service.rs  types.rs
src/ai/providers/: anthropic.rs  azure.rs  google.rs  local.rs  mod.rs  ollama.rs  openai.rs
src/cli/: error.rs  mod.rs  output.rs  sarif.rs  sbom.rs  schemas.rs  utils.rs
src/cli/commands/: analyze.rs  dependencies.rs  explain.rs  find.rs  insights.rs  interactive.rs  languages.rs  map.rs  mod.rs  query.rs  refactor.rs  security.rs  stats.rs  symbols.rs  watch.rs
src/infrastructure/: cache.rs  config.rs  database.rs  http_client.rs  mod.rs  rate_limiter.rs
src/languages/: c.rs  cpp.rs  go.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/security/: mod.rs  owasp_detector.rs  secrets_detector.rs  vulnerability_db.rs
src/semantic/: embeddings.rs  graph_builder.rs  mod.rs  ontology.rs  query.rs  storage.rs
test_files/: phase2_demo.rs  sample.go  sample.ts
tests/: advanced_ai_analysis_tests.rs  ai_service_tests.rs  analyzer_cache_tests.rs  analyzer_comprehensive_tests.rs  analyzer_depth.rs  ast_transformation.rs  ast_transformation_tests.rs  basic_integration_tests.rs  c_typedef_integration_test.rs  cli_determinism.rs  cli_enable_security_flag.rs  cli_performance_coverage_tests.rs  cli_sbom_tests.rs  code_evolution_tests.rs  code_map.rs  complexity_analysis_unit_tests.rs  comprehensive_error_handling_tests.rs  comprehensive_integration_tests.rs  cross_language_analysis_test.rs  dependency_analysis.rs  dependency_analysis_tests.rs  dependency_analysis_unit_tests.rs  documentation_validation.rs  enhanced_python_symbol_extraction_tests.rs  enhanced_security_analysis.rs  enhanced_security_tests.rs  enhanced_symbol_extraction_tests.rs  error_tests.rs  file_cache_tests.rs  integration_comprehensive_tests.rs  integration_tests.rs  intent_mapping_tests.rs  language_specific_tests.rs  memory_tracker_tests.rs  missing_language_features_tests.rs  parser_comprehensive_tests.rs  performance_analysis.rs  performance_analysis_tests.rs  performance_optimization_tests.rs  performance_optimizations_tests.rs  (+18 more)
