[package]
name = "rust_tree_sitter"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust library for processing source code with tree-sitter"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust_tree_sitter"
keywords = ["parsing", "tree-sitter", "syntax", "ast", "source-code"]
categories = ["parsing", "development-tools"]

[dependencies]
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
serde_json = "1.0"
tabled = "0.15"
regex = "1.10"

# Phase A: Infrastructure Dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dashmap = "5.5"
governor = "0.6"
tower = { version = "0.4", features = ["timeout", "retry"] }
backoff = "0.4"
dirs = "5.0"
num_cpus = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.0"
wiremock = "0.5"
criterion = "0.5"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde"]
wasm = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "incremental_parsing"
path = "examples/incremental_parsing.rs"

[[example]]
name = "analyze_codebase"
path = "examples/analyze_codebase.rs"

[lib]
name = "rust_tree_sitter"
path = "src/lib.rs"

[[bin]]
name = "tree-sitter-cli"
path = "src/bin/main.rs"
